--- a/aliens-go-home/src/index.css
+++ b/aliens-go-home/src/index.css
@@ -1,13 +1,14 @@
+html,
 body {
+  overflow: hidden;
+  height: 100%;
+  /* width: 100%; */
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: red;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  /* padding: 0; */
+  font-family: sans-serif;
 }
